# alter-season

./: .gitattributes  README.md
app/alter-season-cli/: CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  readme.txt
app/alter-season-qt-widgets/: CMakeLists.txt  README.md  conversionfinishedevt.cpp  conversionfinishedevt.h  conversionselectordlg.cpp  conversionselectordlg.h  converter.cpp  converter.h  imagearea.cpp  imagearea.h  main.cpp  mainwindow.cpp  mainwindow.h
app/common/: .gitignore  readme.txt
model/: .gitignore  README.md
model/artifacts/: summer_to_winter_128x128_torch14.sm  summer_to_winter_256x256_torch14_v2.sm  summer_to_winter_torch14_256x256_00100.sm  winter_to_summer_128x128_torch14.sm  winter_to_summer_256x256_torch14_v2.sm  winter_to_summer_torch14_256x256_00100.sm
model/source/: checkpoint.py  cyclegan.py  dataloader.py  discriminator.py  display.py  generator.py  helpers.py  train.py
